[package]
name = "redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
thiserror = "1.0"
miette = { version = "3.3.0", features = ["fancy"] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.0"

[dev-dependencies]
test-log = { version = "0.2.8", default-features = false, features = ["trace"] }